--- a/src/pages/student_calendar/modals/DownloadInfo.module.css
+++ b/src/pages/student_calendar/modals/DownloadInfo.module.css
@@ -1,67 +1,52 @@
-.sc_download {
-    width: 24rem;
-    padding: 1.5rem;
-    border-radius: 0.5rem;
-    background: var(--surface1);
-    -webkit-box-shadow: inset 0 1px 1px var(--shadow1), 0 2px 3px var(--shadow2);
-    box-shadow: inset 0 1px 1px var(--shadow1), 0 2px 3px var(--shadow2);
+.download_info {
+    width: 36rem;
+    padding: 3rem;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+    border-radius: 1rem;
+    background: var(--background_color1);
+    -webkit-box-shadow: 0.2rem 0.4rem 2rem var(--grey1);
+    box-shadow: 0.2rem 0.4rem 2rem var(--grey1);
 }
 
-.closingicon {
-    position: absolute;
-    top: 0.6rem;
-    right: 0.6rem;
-    cursor: pointer;
+.download_info h1 {
+    margin: 0 0 1rem;
 }
 
-.sc_download h1 {
-    margin: 0;
+.download_info p {
+    margin: 0 0 3rem;
 }
 
-.sc_download p abbr {
-    text-decoration: none;
-}
-
-.sc_download form {
-    height: 2rem;
-    margin: 0 auto;
+.download_info form {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    justify-content: center;
-    position: relative;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    gap: 2rem;
 }
 
-.sc_download form input[type='email'] {
-    letter-spacing: 0.04rem;
-    width: 60%;
-    padding: 0.1rem 0.4rem;
+.download_info form input {
+    letter-spacing: 0.1rem;
+    padding: 0.5rem 1rem;
     background-color: transparent;
-    border: solid 1px var(--button2);
-    border-radius: 0.4rem 0 0 0.4rem;
+    border: solid 0.15rem var(--foreground_color1);
+    border-radius: 1rem;
     outline: none;
+    -webkit-transition: all .3s;
+    -o-transition: all .3s;
+    transition: all .3s;
 }
 
-.sc_download form input[type='submit'] {
-    color: var(--text4);
-    background-color: var(--button2);
-    border: none;
-    border-radius: 0 0.4rem 0.4rem 0;
-    cursor: pointer;
+.download_info form input:focus {
+    -webkit-box-shadow: 0 0 2rem var(--grey4);
+    box-shadow: 0 0 2rem var(--grey4);
 }
 
-.sc_download form span {
-    color: var(--error1);
-    position: absolute;
-    top: 2rem;
-}
-
-.input_error {
-    background-color: var(--error2) !important;
-}
-
-@media screen and (max-width: 360px) {
-    .sc_download {
-        width: 80vw;
+@media screen and (max-width: 560px) {
+    .download_info {
+        width: 90vw;
     }
 }
