--- a/src/components/Footer.module.css
+++ b/src/components/Footer.module.css
@@ -26,7 +26,9 @@
 }
 
 .footer_content a {
+    font-weight: normal;
     color: inherit;
+    text-decoration: underline;
     -webkit-transition: letter-spacing .3s;
     -o-transition: letter-spacing .3s;
     transition: letter-spacing .3s;
