--- a/src/components/navbar/Navigations.module.css
+++ b/src/components/navbar/Navigations.module.css
@@ -1,10 +1,12 @@
 .navigations {
     opacity: 0;
-    position: absolute;
+    pointer-events: none;
+    position: fixed;
     top: 0;
     left: 0;
-    width: 100vw;
-    height: 100vh;
+    z-index: 10;
+    width: 100%;
+    height: 100%;
     background: -o-linear-gradient(left, var(--background_color2) 16rem, transparent);
     background: -webkit-gradient(linear, left top, right top, color-stop(16rem, var(--background_color2)), to(transparent));
     background: linear-gradient(90deg, var(--background_color2) 16rem, transparent);
@@ -19,6 +21,19 @@
 
 .navigations_visible {
     opacity: 1;
+    pointer-events: all;
+}
+
+.cross_button_container {
+    position: absolute;
+    left: 2rem;
+    height: 4rem;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
 }
 
 .navigations>ul {
