--- a/src/pages/student_calendar/components/Devices.module.css
+++ b/src/pages/student_calendar/components/Devices.module.css
@@ -45,7 +45,7 @@
     color: var(--foreground_color2);
 }
 
-@media screen and (max-width: 1280px) {
+@media screen and (max-width: 1080px) {
     .devices_container {
         margin: 0;
         width: 100%;
@@ -65,6 +65,7 @@
         position: relative;
         top: 0;
         left: 0;
+        z-index: 0;
         width: 26%;
     }
 
