--- a/src/components/Modal.module.css
+++ b/src/components/Modal.module.css
@@ -21,6 +21,16 @@
     top: 50%;
     left: 50%;
     translate: -50% -50%;
+    max-width: 90vw;
+    max-height: 90vh;
+    overflow: auto;
+    padding: 3rem;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+    border-radius: 1rem;
+    background-color: var(--background_color1);
+    -webkit-box-shadow: 0.2rem 0.4rem 2rem var(--grey1);
+    box-shadow: 0.2rem 0.4rem 2rem var(--grey1);
     scale: 0.9;
     -webkit-transition: scale .4s;
     -o-transition: scale .4s;
