--- a/src/components/navbar/Navbar.module.css
+++ b/src/components/navbar/Navbar.module.css
@@ -5,7 +5,7 @@
     right: 0;
     z-index: 10;
     height: 4rem;
-    padding: 0 2rem;
+    padding: 0 2vw;
     background: -webkit-gradient(linear, left top, left bottom, from(var(--background_color1)), to(transparent));
     background: -o-linear-gradient(top, var(--background_color1), transparent);
     background: linear-gradient(180deg, var(--background_color1), transparent);
