--- a/src/index.css
+++ b/src/index.css
@@ -1,29 +1,17 @@
 @font-face {
-  font-family: 'Poppins';
-  src: local('Poppins'), url('./assets/fonts/Poppins-Regular.ttf');
+  font-family: 'DM Sans';
+  src: url('./assets/fonts/DMSans-Regular.ttf');
 }
 
 @font-face {
-  font-family: 'Poppins';
-  src: local('Poppins'), url('./assets/fonts/Poppins-Bold.ttf');
-  font-weight: bold;
-}
-
-@font-face {
-  font-family: 'Goldman';
-  src: url('./assets/fonts/Goldman-Regular.ttf');
-}
-
-@font-face {
-  font-family: 'Goldman';
-  src: url('./assets/fonts/Goldman-Bold.ttf');
+  font-family: 'DM Sans';
+  src: url('./assets/fonts/DMSans-Bold.ttf');
   font-weight: bold;
 }
 
 :root {
-  --font-poppins: 'Poppins', var(--font-system);
-  --font-goldman: 'Goldman', var(--font-system);
-  --font-system: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', sans-serif;
+  --body_text_font_family: 'DM Sans', var(--system_font_family);
+  --system_font_family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', sans-serif;
 }
 
 :root {
@@ -114,15 +102,6 @@
   --card_background_color: var(--white245_opacity50);
 }
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  font-family: var(--font-goldman);
-}
-
 a {
   font-weight: bold;
   color: var(--primary_color);
@@ -135,7 +114,7 @@ a:hover {
 
 body {
   margin: 0;
-  font-family: var(--font-poppins);
+  font-family: var(--body_text_font_family);
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
