--- a/src/pages/student_calendar/components/Body.module.css
+++ b/src/pages/student_calendar/components/Body.module.css
@@ -8,92 +8,130 @@
     padding: 5rem 2rem 2rem;
 }
 
+.body :where(h1, h2, h3) {
+    font-size: 1.25rem;
+    font-weight: normal;
+    text-transform: capitalize;
+    margin: 0;
+}
+
+.big_text {
+    font-size: 2rem;
+    font-weight: bold;
+    text-transform: capitalize;
+    margin: 0.5rem 0 2rem;
+    max-width: 44rem;
+}
+
 .body header {
-    height: 32rem;
-    margin: 1rem 0;
+    height: 24rem;
+    margin: 2rem 0;
     padding: 2rem;
     border-radius: 1rem;
     background: url(../../../assets/images/student_room.png), var(--background_color2);
-    background-size: 32rem 18rem;
+    background-size: 40rem 22.5rem;
     background-position: top right;
     background-repeat: no-repeat;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center;
-    -webkit-box-pack: justify;
-    -ms-flex-pack: justify;
-    justify-content: space-between;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
 }
 
-
-.body header p {
-    font-family: var(--font-goldman);
-    text-transform: uppercase;
-    margin: 0;
-}
-
-.body header p span {
-    letter-spacing: 0.2rem;
-    word-spacing: 0.4rem;
-}
-
-.body header p::before {
-    content: "——";
-    margin-right: 1rem;
-}
-
-.body header h1 {
+.body header .big_text {
     font-size: 2.5rem;
-    text-transform: capitalize;
-    margin: 0.5rem 0 2rem;
 }
 
-.body header section {
+.download_buttons {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
     gap: 1rem;
 }
 
-.body header section img {
+.download_buttons>span {
+    cursor: pointer;
+}
+
+.download_buttons img {
     width: 8rem;
+}
+
+.showcase {
+    margin: 8rem 0;
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: 35% 5% 60%;
+    grid-template-columns: 35% 60%;
+    gap: 5%;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+}
+
+.features {
+    margin: 8rem 0 4rem;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+}
+
+.features .big_text {
+    text-align: center;
 }
 
 @media screen and (max-width: 1080px) {
     .body header {
-        height: auto;
+        height: 28rem;
         padding-top: 6rem;
+    }
+
+    .body header .big_text {
+        font-size: 2rem;
+        max-width: 35rem;
+    }
+
+    .showcase {
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
         -webkit-box-orient: vertical;
         -webkit-box-direction: normal;
         -ms-flex-direction: column;
         flex-direction: column;
-        -webkit-box-align: start;
-        -ms-flex-align: start;
-        align-items: start;
-        gap: 4rem;
+        gap: 2rem;
     }
 
-    .body header h1 {
-        font-size: 2rem;
-        max-width: 35rem;
+    .showcase .big_text {
+        text-align: center;
+    }
+
+    .showcase>div:nth-of-type(2) {
+        width: 80%;
     }
 }
 
 @media screen and (max-width: 640px) {
     .body header {
         background-size: 28rem 15.75rem;
-        padding-top: 10rem;
     }
-}
 
-@media screen and (max-width: 300px) {
-    .body header section {
-        -webkit-box-orient: vertical;
-        -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-        flex-direction: column;
+    .showcase>div:nth-of-type(2) {
+        width: 100%;
     }
 }
