--- a/src/pages/student_calendar/modals/DownloadInfo.module.css
+++ b/src/pages/student_calendar/modals/DownloadInfo.module.css
@@ -1,12 +1,5 @@
 .download_info {
-    width: 36rem;
-    padding: 3rem;
-    -webkit-box-sizing: border-box;
-    box-sizing: border-box;
-    border-radius: 1rem;
-    background: var(--background_color1);
-    -webkit-box-shadow: 0.2rem 0.4rem 2rem var(--grey1);
-    box-shadow: 0.2rem 0.4rem 2rem var(--grey1);
+    max-width: 440px;
 }
 
 .download_info h1 {
@@ -43,10 +36,4 @@
 .download_info form input:focus {
     -webkit-box-shadow: 0 0 2rem var(--grey4);
     box-shadow: 0 0 2rem var(--grey4);
-}
-
-@media screen and (max-width: 560px) {
-    .download_info {
-        width: 90vw;
-    }
 }
