--- a/src/pages/contact/components/Body.module.css
+++ b/src/pages/contact/components/Body.module.css
@@ -1,138 +1,62 @@
-.cont_modal {
-    width: 350px;
-    padding: 1.8rem;
-    border-radius: 0.8rem;
-    background: var(--surface4);
-    -webkit-box-shadow: 0px 0px 2rem 0px var(--shadow2);
-    box-shadow: 0px 0px 2rem 0px var(--shadow2);
+.body {
+    background-color: var(--background_color1);
 }
 
-.closingicon {
-    position: absolute;
-    top: 0.6rem;
-    right: 0.6rem;
-    cursor: pointer;
+.body>div {
+    max-width: 1280px;
+    margin: 0 auto;
+    padding: 5rem 2rem 2rem;
 }
 
-.cont_modal h1 {
-    margin: 1rem 0;
+.body>div>div {
+    margin: 2rem 0;
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: 1fr 1fr;
+    grid-template-columns: 1fr 1fr;
 }
 
-.tabs {
-    padding: 0.1rem;
-    border-radius: 0.5rem;
-    background-color: var(--surface3);
-    margin-bottom: 2.2rem;
+.email {
+    margin-top: 2.5rem;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    position: relative;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-}
-
-.tabs input {
-    display: none;
-}
-
-.tabs section {
-    width: calc(100% / 2);
-    padding: 0.3rem;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
-    justify-content: center;
-    cursor: pointer;
-    z-index: 1;
-}
-
-.tabs span {
-    width: calc((100% - 0.5rem) / 2);
-    border-radius: 0.5rem;
-    background-color: var(--button3);
-    position: absolute;
-    top: 0.2rem;
-    bottom: 0.2rem;
-    -webkit-transition: 0.15s ease, -webkit-transform 0.25s ease-out;
-    transition: 0.15s ease, -webkit-transform 0.25s ease-out;
-    -o-transition: 0.15s ease, transform 0.25s ease-out;
-    transition: 0.15s ease, transform 0.25s ease-out;
-    transition: 0.15s ease, transform 0.25s ease-out, -webkit-transform 0.25s ease-out;
-}
-
-.tabs input:nth-of-type(1):checked~span {
-    -webkit-transform: translateX(0);
-    -ms-transform: translateX(0);
-    transform: translateX(0);
-}
-
-.tabs input:nth-of-type(2):checked~span {
-    -webkit-transform: translateX(100%);
-    -ms-transform: translateX(100%);
-    transform: translateX(100%);
-}
-
-.emails {
-    position: absolute;
-    top: 10rem;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -ms-flex-direction: column;
-    flex-direction: column;
+    -webkit-box-align: start;
+    -ms-flex-align: start;
+    align-items: start;
     gap: 1rem;
-    opacity: 1;
-    pointer-events: all;
-    scale: 1;
-    translate: 0;
-    -webkit-transition: all 0.3s ease;
-    -o-transition: all 0.3s ease;
-    transition: all 0.3s ease;
 }
 
-.emails_hide {
-    opacity: 0;
-    pointer-events: none;
-    scale: 0.98;
-    translate: -30px 0;
+.email img {
+    width: 1.5rem;
 }
 
-.emails li {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    gap: 0.8rem;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center;
-}
-
-.emails a {
-    color: inherit;
+.email>section h2 {
     font-size: 1rem;
-    letter-spacing: 0.1rem;
-    line-height: 1.4rem;
-    text-decoration: none;
-    -webkit-transition: all 0.2s ease;
-    -o-transition: all 0.2s ease;
-    transition: all 0.2s ease;
+    margin-top: 0;
+    margin-bottom: 0.5rem;
 }
 
-.emails a:hover {
-    color: var(--link);
-    -webkit-transform: translateX(0.1rem);
-    -ms-transform: translateX(0.1rem);
-    transform: translateX(0.1rem);
-    letter-spacing: 0.15rem;
+.email>section a {
+    font-size: 0.8rem;
 }
 
-.contact_form {
+.message {
+    width: 100%;
+    max-width: 520px;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+    padding: 2.5rem;
+    border-radius: 1rem;
+    background-color: var(--background_color3);
+}
+
+.message h2 {
+    margin: 0 0 3rem 0;
+}
+
+.message form {
+    margin-top: auto;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -140,35 +64,21 @@
     -webkit-box-direction: normal;
     -ms-flex-direction: column;
     flex-direction: column;
-    gap: 1.6rem;
-    opacity: 1;
-    pointer-events: all;
-    scale: 1;
-    translate: 0;
-    -webkit-transition: all 0.4s ease;
-    -o-transition: all 0.4s ease;
-    transition: all 0.4s ease;
+    gap: 2rem;
 }
 
-.contact_form_hide {
-    opacity: 0;
-    pointer-events: none;
-    scale: 0.98;
-    translate: 20px 0;
-}
-
-.contact_form section {
+.message form section {
     position: relative;
 }
 
-.contact_form label {
+.message form label {
     position: absolute;
-    top: 0.2rem;
-    left: 0.2rem;
-    letter-spacing: 0.05rem;
-    padding: 0.1rem 0.4rem;
+    top: 0.4rem;
+    left: 0.4rem;
+    letter-spacing: 0.08rem;
+    padding: 0.2rem 0.4rem;
     border-radius: 0.4rem;
-    background-color: var(--surface2);
+    background-color: var(--background_color1);
     pointer-events: none;
     -webkit-transform-origin: 0 50%;
     -ms-transform-origin: 0 50%;
@@ -178,120 +88,61 @@
     transition: all 0.2s ease;
 }
 
-.contact_form p {
-    color: var(--error1);
-    margin: 0;
-    position: absolute;
-    bottom: -1.1rem;
-    left: 0.2rem;
-}
-
-.textarea_label {
+.message form label[for='message'] {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    gap: 0.6rem;
+    gap: 0.8rem;
 }
 
-.textarea_label span {
+.message form label[for='message'] span {
     padding: 0.1rem 0.4rem;
     border-radius: 0.4rem;
-    background-color: var(--surface4);
-    border-radius: 0.4rem;
+    background-color: var(--primary_color);
 }
 
-.textarea_label_error span {
-    background-color: var(--error2);
-}
-
-.contact_form :where(input[type='text'], input[type='email'], textarea) {
-    font-size: 0.9rem;
+.message form :where(input, textarea) {
     letter-spacing: 0.1rem;
+    word-spacing: 0.15rem;
     width: 100%;
     -webkit-box-sizing: border-box;
     box-sizing: border-box;
-    padding: 0.8rem 0.5rem 0.3rem;
+    padding: 1rem 0.75rem 0.5rem;
     border: none;
-    border-radius: 0.4rem;
-    background: var(--surface2);
     outline: none;
+    border-radius: 0.4rem;
+    background: var(--background_color1);
 }
 
-.contact_form section:nth-of-type(3) input {
-    letter-spacing: normal;
-    text-transform: uppercase;
-}
-
-.contact_form textarea {
-    font-size: 1rem;
-    letter-spacing: normal;
+.message form textarea {
     resize: none;
 }
 
-.contact_form input:not(:-moz-placeholder-shown)~label {
-    transform: translate(0.6rem, -1rem) scale(0.9);
-    letter-spacing: normal;
-}
-
-.contact_form input:not(:-ms-input-placeholder)~label {
-    -ms-transform: translate(0.6rem, -1rem) scale(0.9);
-    transform: translate(0.6rem, -1rem) scale(0.9);
-    letter-spacing: normal;
-}
-
-.contact_form input:focus~label,
-.contact_form input:not(:placeholder-shown)~label {
+.message form :where(input:focus,
+    textarea:focus,
+    input:not(:-moz-placeholder-shown),
+    textarea:not(:-moz-placeholder-shown),
+    input:not(:-ms-input-placeholder),
+    textarea:not(:-ms-input-placeholder),
+    input:not(:placeholder-shown),
+    textarea:not(:placeholder-shown),
+)~label {
     -webkit-transform: translate(0.6rem, -1rem) scale(0.9);
     -ms-transform: translate(0.6rem, -1rem) scale(0.9);
     transform: translate(0.6rem, -1rem) scale(0.9);
     letter-spacing: normal;
 }
 
-.contact_form textarea:not(:-moz-placeholder-shown)~label {
-    transform: translate(0.6rem, -1rem) scale(0.9);
-    letter-spacing: normal;
-}
-
-.contact_form textarea:not(:-ms-input-placeholder)~label {
-    -ms-transform: translate(0.6rem, -1rem) scale(0.9);
-    transform: translate(0.6rem, -1rem) scale(0.9);
-    letter-spacing: normal;
-}
-
-.contact_form textarea:focus~label,
-.contact_form textarea:not(:placeholder-shown)~label {
-    -webkit-transform: translate(0.6rem, -1rem) scale(0.9);
-    -ms-transform: translate(0.6rem, -1rem) scale(0.9);
-    transform: translate(0.6rem, -1rem) scale(0.9);
-    letter-spacing: normal;
-}
-
-.contact_form input[type='submit'] {
-    font-size: 1rem;
-    color: var(--text4);
-    letter-spacing: 0.1rem;
-    padding: 0.4rem;
-    background-color: var(--button2);
-    border: none;
-    border-radius: 0.4rem;
-    cursor: pointer;
-    -webkit-transition: all 0.1s;
-    -o-transition: all 0.1s;
-    transition: all 0.1s;
-}
-
-.contact_form input[type='submit']:active {
-    -webkit-box-shadow: 0px 0px 4px 1px var(--button1);
-    box-shadow: 0px 0px 4px 1px var(--button1);
-}
-
-.contact_form_input_error {
-    outline: 2px dashed var(--error2)
-}
-
-@media screen and (max-width: 440px) {
-    .cont_modal {
-        width: 80vw;
-        padding: 1.2rem;
+@media screen and (max-width: 1080px) {
+    .body>div>div {
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+        -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+        gap: 4rem 2rem;
+        -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+        justify-content: space-between;
     }
 }
