api - sending message and response ui

--- a/src/components/navbar/Navbar.module.css
+++ b/src/components/navbar/Navbar.module.css
@@ -6,16 +6,9 @@
     z-index: 10;
     height: 4rem;
     padding: 0 2vw;
-    display: -ms-grid;
     display: grid;
-    -ms-grid-columns: 1fr 1fr 1fr;
     grid-template-columns: 1fr 1fr 1fr;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
     align-items: center;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
     user-select: none;
 }
 
@@ -24,24 +17,9 @@
     top: 0;
     left: 0;
     right: 0;
-    z-index: 0;
+    z-index: 9;
     height: 4rem;
-    -webkit-backdrop-filter: blur(5px);
     backdrop-filter: blur(5px);
-    -webkit-mask: -webkit-gradient(linear,
-            left top, left bottom,
-            from(rgba(0, 0, 0, 1)),
-            color-stop(75%, rgba(0, 0, 0, 0.8)),
-            to(rgba(0, 0, 0, 0)));
-    -webkit-mask: linear-gradient(180deg,
-            rgba(0, 0, 0, 1) 0%,
-            rgba(0, 0, 0, 0.8) 75%,
-            rgba(0, 0, 0, 0) 100%);
-    mask: -webkit-gradient(linear,
-            left top, left bottom,
-            from(rgba(0, 0, 0, 1)),
-            color-stop(75%, rgba(0, 0, 0, 0.8)),
-            to(rgba(0, 0, 0, 0)));
     mask: linear-gradient(180deg,
             rgba(0, 0, 0, 1) 0%,
             rgba(0, 0, 0, 0.8) 75%,
@@ -49,17 +27,11 @@
 }
 
 .navbar a {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
 }
 
 .logo {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
     justify-content: center;
 }
 
@@ -69,22 +41,13 @@
 }
 
 .socials {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    display: flex;
-    -webkit-box-pack: end;
-    -ms-flex-pack: end;
-    justify-content: end;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
+    justify-content: flex-end;
     align-items: center;
     gap: 1rem;
 }
 
 .socials a {
-    -webkit-transition: rotate .5s ease-in-out;
-    -o-transition: rotate .5s ease-in-out;
     transition: rotate .5s ease-in-out;
 }
 
