--- a/src/pages/student_calendar/modals/DownloadInfo.module.css
+++ b/src/pages/student_calendar/modals/DownloadInfo.module.css
@@ -6,17 +6,12 @@
     margin: 0 0 1rem;
 }
 
-.download_info p {
+.download_info>p {
     margin: 0 0 3rem;
 }
 
 .download_info form {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -ms-flex-direction: column;
     flex-direction: column;
     gap: 2rem;
 }
@@ -28,12 +23,9 @@
     border: solid 0.15rem var(--foreground_color1);
     border-radius: 1rem;
     outline: none;
-    -webkit-transition: all .3s;
-    -o-transition: all .3s;
     transition: all .3s;
 }
 
 .download_info form input:focus {
-    -webkit-box-shadow: 0 0 2rem var(--grey4);
     box-shadow: 0 0 2rem var(--grey4);
 }
