--- a/src/pages/contact/components/Body.module.css
+++ b/src/pages/contact/components/Body.module.css
@@ -92,13 +92,16 @@
     box-sizing: border-box;
     padding: 1rem 0.75rem 0.5rem;
     border: none;
-    outline: none;
     border-radius: 0.4rem;
     background: var(--background_color1);
 }
 
 .message form textarea {
     resize: none;
+}
+
+.message form :where(input, textarea):focus {
+    outline: none;
 }
 
 .message form :where(input:focus,
@@ -112,6 +115,18 @@
 )~label {
     transform: translate(0.6rem, -1rem) scale(0.9);
     letter-spacing: normal;
+}
+
+.message form section>span {
+    position: absolute;
+    left: 0;
+    bottom: -1.2rem;
+    font-size: 0.9rem;
+    color: var(--error_color);
+}
+
+.input_error {
+    outline: 0.15rem dashed var(--error_container_color);
 }
 
 @media screen and (max-width: 1080px) {
