--- a/src/pages/student_calendar/modals/DownloadInfo.module.css
+++ b/src/pages/student_calendar/modals/DownloadInfo.module.css
@@ -11,12 +11,14 @@
 }
 
 .download_info form {
+    position: relative;
     display: flex;
     flex-direction: column;
     gap: 2rem;
 }
 
 .download_info form input {
+    font-size: 1rem;
     letter-spacing: 0.1rem;
     padding: 0.5rem 1rem;
     background-color: transparent;
@@ -28,4 +30,16 @@
 
 .download_info form input:focus {
     box-shadow: 0 0 2rem var(--grey4);
+}
+
+.download_info form span {
+    position: absolute;
+    left: 0;
+    top: 2.5rem;
+    font-size: 0.9rem;
+    color: var(--error_color);
+}
+
+.input_error {
+    border-color: var(--error_color) !important;
 }
