--- a/src/components/navbar/Navbar.module.css
+++ b/src/components/navbar/Navbar.module.css
@@ -10,20 +10,9 @@
     grid-template-columns: 1fr 1fr 1fr;
     align-items: center;
     user-select: none;
-}
-
-.blur_background {
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    z-index: 9;
-    height: 4rem;
-    backdrop-filter: blur(5px);
-    mask: linear-gradient(180deg,
-            rgba(0, 0, 0, 1) 0%,
-            rgba(0, 0, 0, 0.8) 75%,
-            rgba(0, 0, 0, 0) 100%);
+    background: linear-gradient(180deg,
+            var(--background_color1) 25%,
+            transparent);
 }
 
 .navbar a {
