--- a/src/components/navbar/Navigations.module.css
+++ b/src/components/navbar/Navigations.module.css
@@ -7,15 +7,8 @@
     z-index: 10;
     width: 100%;
     height: 100%;
-    background: -o-linear-gradient(left, var(--background_color2) 16rem, transparent);
-    background: -webkit-gradient(linear, left top, right top, color-stop(16rem, var(--background_color2)), to(transparent));
     background: linear-gradient(90deg, var(--background_color2) 16rem, transparent);
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
     user-select: none;
-    -webkit-transition: opacity .3s linear;
-    -o-transition: opacity .3s linear;
     transition: opacity .3s linear;
 }
 
@@ -28,28 +21,17 @@
     position: absolute;
     left: 2vw;
     height: 4rem;
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
     align-items: center;
 }
 
 .navigations>ul {
-    width: -webkit-fit-content;
-    width: -moz-fit-content;
     width: fit-content;
     height: 100%;
     padding: 6rem 8rem 0 2vw;
     margin: 0;
     list-style: none;
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -ms-flex-direction: column;
     flex-direction: column;
     gap: 1.5rem;
 }
@@ -62,63 +44,37 @@
     list-style: none;
 }
 
-.navigations>ul>li {
-    font-size: 1.5rem;
-}
-
-.navigations>ul>ul>li {
-    font-size: 1rem;
-}
-
 .navigations ul li {
-    text-transform: uppercase;
-    width: -webkit-fit-content;
-    width: -moz-fit-content;
-    width: fit-content;
+    font-size: 1.5rem;
+    width: 6rem;
+    padding: 0.2rem 0.8rem;
+    border: 0.1rem solid var(--grey4);
+    border-radius: 0.5rem;
+    background-color: var(--background_color3);
     cursor: pointer;
     translate: -24rem 0;
 }
 
-.navigations ul li::before {
-    content: "";
-    position: absolute;
-    bottom: -0.1em;
-    width: 100%;
-    height: 0.1em;
-    background-color: var(--foreground_color2);
-    scale: 0 1;
-    -webkit-transition: scale .3s ease-out;
-    -o-transition: scale .3s ease-out;
-    transition: scale .3s ease-out;
+.navigations>ul>ul>li {
+    font-size: 1.25rem;
+    width: fit-content;
 }
 
-.navigations ul li:hover::before {
-    -webkit-transform-origin: left;
-    -ms-transform-origin: left;
-    transform-origin: left;
-    scale: 1;
+.navigations ul li:hover {
+    background-color: transparent;
 }
 
-.navigations ul li:active::before {
-    -webkit-transform-origin: right;
-    -ms-transform-origin: right;
-    transform-origin: right;
-    scale: 0 1;
+.navigations ul li:active {
+    scale: 0.8;
 }
 
 .navigations>ul>li:nth-of-type(2) {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-align: baseline;
-    -ms-flex-align: baseline;
     align-items: baseline;
     gap: 0.5rem;
 }
 
 .navigations>ul>li:nth-of-type(2) img {
-    -webkit-transition: all .3s;
-    -o-transition: all .3s;
     transition: all .3s;
 }
 
@@ -127,20 +83,14 @@
 }
 
 .navigations ul li:nth-of-type(1) {
-    -webkit-transition: all 500ms;
-    -o-transition: all 500ms;
     transition: all 500ms;
 }
 
 .navigations ul li:nth-of-type(2) {
-    -webkit-transition: all 550ms 50ms;
-    -o-transition: all 550ms 50ms;
     transition: all 550ms 50ms;
 }
 
 .navigations ul li:nth-of-type(3) {
-    -webkit-transition: all 600ms 100ms;
-    -o-transition: all 600ms 100ms;
     transition: all 600ms 100ms;
 }
 
