--- a/src/pages/contact/components/Body.module.css
+++ b/src/pages/contact/components/Body.module.css
@@ -79,6 +79,8 @@
 }
 
 .message form label[for='message'] span {
+    font-size: 0.9rem;
+    color: var(--background_color3);
     padding: 0.1rem 0.4rem;
     border-radius: 0.4rem;
     background-color: var(--primary_color);
