--- a/src/pages/student_calendar/modals/DownloadInfo.module.css
+++ b/src/pages/student_calendar/modals/DownloadInfo.module.css
@@ -29,7 +29,7 @@
 }
 
 .download_info form input:focus {
-    box-shadow: 0 0 2rem var(--grey4);
+    border-color: var(--primary_color);
 }
 
 .download_info form span {
