--- a/src/components/Modal.module.css
+++ b/src/components/Modal.module.css
@@ -6,7 +6,7 @@
     z-index: 10;
     width: 100%;
     height: 100%;
-    background-color: var(--modal_barrier_color);
+    background-color: var(--background_color3_a50);
     transition: opacity .3s;
 }
 
