--- a/src/index.css
+++ b/src/index.css
@@ -10,47 +10,15 @@
 }
 
 :root {
-  --body_text_font_family: 'DM Sans', var(--system_font_family);
-  --system_font_family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', sans-serif;
+  --dm_sans_font_family: 'DM Sans', var(--system_font_family);
+  --system_font_family: -apple-system, BlinkMacSystemFont,
+    'Segoe UI', 'Roboto', sans-serif;
 }
 
 :root {
-  font-size: 16px;
-  color: var(--foreground_color2);
-  scroll-behavior: smooth;
-}
-
-@media screen and (max-width: 840px) {
-  :root {
-    font-size: 14px;
-  }
-}
-
-@media screen and (max-width: 480px) {
-  :root {
-    font-size: 12px;
-  }
-}
-
-@media screen and (max-width: 320px) {
-  :root {
-    font-size: 8px;
-  }
-}
-
-:root {
-  --black0: rgb(0, 0, 0);
-  --black20: rgb(20, 20, 20);
-  --black40: rgb(40, 40, 40);
-
   --white255: rgb(255, 255, 255);
   --white245: rgb(245, 245, 245);
   --white235: rgb(235, 235, 235);
-
-  --grey80: rgb(80, 80, 80);
-  --grey120: rgb(120, 120, 120);
-  --grey160: rgb(160, 160, 160);
-  --grey200: rgb(200, 200, 200);
 
   --error_red: #bf4040;
   --error_red_light: #f6c1c1;
@@ -59,15 +27,18 @@
   --warning_yellow: #bfbf40;
   --warning_yellow_light: #f6f6c1;
 
-  --alpine_green: rgb(27, 84, 72);
-  --alpine_green_dark: rgb(0, 44, 32);
-  --alpine_green_light: rgb(107, 164, 152);
-  --alpine_green_white: rgb(187, 244, 232);
+  --sapphire: #1356C2;
+  --sapphire_dark: #0C3475;
+  --sapphire_shade: #041229;
+  --sapphire_shade_tint1: #364154;
+  --sapphire_shade_tint2: #68717f;
+  --sapphire_shade_tint3: #9ba0a9;
+  --sapphire_shade_tint4: #cdd0d4;
 
-  --cafe_au_lait_brown_white: rgb(234, 229, 217);
+  --cafe_au_lait_brown: #a5785e;
+  --cafe_au_lait_brown_white: #eae5d9;
 
-  --grey160_opacity50: rgba(160, 160, 160, 0.5);
-  --white245_opacity50: rgba(245, 245, 245, 0.8);
+  --white235_a50: rgba(235, 235, 235, 0.5);
 }
 
 :root {
@@ -75,14 +46,12 @@
   --background_color2: var(--white245);
   --background_color3: var(--white235);
 
-  --foreground_color1: var(--black0);
-  --foreground_color2: var(--black20);
-  --foreground_color3: var(--black40);
+  --foreground_color: var(--sapphire_shade);
 
-  --grey1: var(--grey80);
-  --grey2: var(--grey120);
-  --grey3: var(--grey160);
-  --grey4: var(--grey200);
+  --grey1: var(--sapphire_shade_tint1);
+  --grey2: var(--sapphire_shade_tint2);
+  --grey3: var(--sapphire_shade_tint3);
+  --grey4: var(--sapphire_shade_tint4);
 
   --error_color: var(--error_red);
   --error_container_color: var(--error_red_light);
@@ -91,32 +60,40 @@
   --warning_color: var(--warning_yellow);
   --warning_container_color: var(--warning_yellow_light);
 
-  --primary_color: var(--alpine_green);
-  --on_primary_color: var(--alpine_green_white);
-  --primary_container_color: var(--alpine_green_light);
-  --on_primary_container_color: var(--alpine_green_dark);
+  --primary_color: var(--sapphire);
+  --primary_color_dark: var(--sapphire_dark);
 
+  --sc_app_primary_color: var(--cafe_au_lait_brown);
   --sc_app_on_primary_color: var(--cafe_au_lait_brown_white);
 
-  --modal_barrier_color: var(--grey160_opacity50);
-  --card_background_color: var(--white245_opacity50);
+  --background_color3_a50: var(--white235_a50);
 }
 
-a {
-  font-weight: bold;
-  color: var(--primary_color);
-  text-decoration: none;
+:root {
+  font-size: 16px;
 }
 
-a:hover {
-  text-decoration: underline;
+@media screen and (max-width: 760px) {
+  :root {
+    font-size: 14px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  :root {
+    font-size: 12px;
+  }
+}
+
+html {
+  scroll-behavior: smooth;
 }
 
 body {
   margin: 0;
-  font-family: var(--body_text_font_family);
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: var(--dm_sans_font_family);
+  color: var(--foreground_color);
+  background-color: var(--background_color1);
 }
 
 body::-webkit-scrollbar {
@@ -125,28 +102,25 @@ body::-webkit-scrollbar {
   background-color: var(--background_color2);
 }
 
-body::-webkit-scrollbar-thumb {
-  border-radius: 0.2rem;
-  background-color: var(--grey4);
-  -webkit-box-shadow: inset 0.1rem 0.05rem 0.2rem var(--background_color3);
-  box-shadow: inset 0.1rem 0.05rem 0.2rem var(--background_color3);
+body::-webkit-scrollbar:hover {
+  outline: 0.1rem solid var(--background_color3);
 }
 
-body::-webkit-scrollbar-thumb:hover {
-  background-color: var(--grey3);
+body::-webkit-scrollbar-thumb {
+  border-radius: 0.25rem;
+  background-color: var(--grey4);
 }
 
 body::-webkit-scrollbar-thumb:active {
-  -webkit-box-shadow: inset 0.1rem 0.05rem 0.2rem var(--grey4);
-  box-shadow: inset 0.1rem 0.05rem 0.2rem var(--grey4);
+  background-color: var(--grey3);
 }
 
-::-moz-selection {
-  background-color: var(--primary_light_color2);
-  color: var(--foreground_color2);
+a {
+  font-weight: 600;
+  color: var(--primary_color);
+  text-decoration: none;
 }
 
-::selection {
-  background-color: var(--on_primary_color);
-  color: var(--foreground_color2);
+a:hover {
+  text-decoration: underline;
 }
