--- a/src/components/Footer.module.css
+++ b/src/components/Footer.module.css
@@ -6,6 +6,7 @@
     font-size: 0.8rem;
     color: var(--grey1);
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
     gap: 0.5rem;
@@ -13,6 +14,7 @@
 
 .legal {
     display: flex;
+    flex-wrap: wrap;
     gap: 0.5rem;
 }
 
@@ -28,7 +30,7 @@
 }
 
 .legal a:hover {
-    color: var(--primary_color);
+    color: var(--blue1);
 }
 
 .socials {
@@ -39,4 +41,5 @@
 
 .socials img {
     width: 1.25rem;
+    vertical-align: bottom;
 }
